samples/_failures_safe/1761075196_ac267e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3418cce8.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_3418cce8.c:129:47: error: expected declaration or statement at end of input
  129 | int matrix_transpose(struct Matrix *a, struct Matrix *result) {
      |                                               ^~~~~~
